@@ -355,6 +355,7 @@
     <branch id="HEAD"/>
   </module>
   <module id="pessulus">
+    <maintainer id="vuntz"/>
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
   </module>
@@ -490,6 +491,7 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-desktop">
+    <maintainer id="vuntz"/>
     <defaults>
       <branch>
         <domain id="po">
@@ -577,6 +579,7 @@
     <branch id="seahorse-0-8"/>
   </module>
   <module id="gnome-panel">
+    <maintainer id="vuntz"/>
     <defaults>
       <branch>
         <domain id="po">
@@ -1110,6 +1113,7 @@
     <branch id="HEAD"/>
   </module>
   <module id="libwnck">
+    <maintainer id="vuntz"/>
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
@@ -1204,6 +1208,7 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-session">
+    <maintainer id="vuntz"/>
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
