@@ -105,6 +105,14 @@
     <email>veillard@redhat.com</email>
     <nick>DV</nick>
   </person>
+  <person id="vuntz">
+    <name>Vincent Untz</name>
+    <email>vuntz@gnome.org</email>
+    <nick>vuntz</nick>
+    <webpage>http://www.vuntz.net/</webpage>
+    <icon>http://planet.gnome.org/heads/vuntz.png</icon>
+    <bugzilla-account>vuntz@gnome.org</bugzilla-account>
+  </person>
 
 <!-- non-Gnome people -->
   <person id="xdg-ivan">
