@@ -1,3 +1,8 @@
+2007-02-04  Vincent Untz  <vuntz@gnome.org>
+
+	* people.xml.in: add myself
+	* gnome-modules.xml.in: put myself maintainers on some modules.
+
 2007-01-28  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-teams.xml.in: Update Polish team webpages.
